demo: installer - fix: add popup style - feat: close and minimize button, settings page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <input type="text" placeholder="Film, dizi veya anime ara...">
       </div>
       <button class="add-button">Yeni ekle</button>
+      <div class="window-controls">
+        <button class="window-control close"><i class="fas fa-times"></i></button>
+        <button class="window-control minimize"><i class="fas fa-window-minimize"></i></button>
+      </div>
     </header>
 
     <!-- Navigasyon Çubuğu -->
